@@ -1,1 +1,1 @@
-/usr/lib
+/lib
