@@ -12,6 +12,7 @@ cryptsetup (2:1.2.0~rc1-1) experimental; urgency=low
     - no longer supports luksOpen, luksFormat and create for open devices
     - remove debian/patches/01_manpage.patch, incorporated upstream
     - and many more changes, see upstream changelog for further information
+    - update debian/libcryptsetup1.symbols 
   * invoke update-initramfs at cryptsetup removal in order to not leave behind
     a broken initramfs. thanks to ubuntu for the hint.
   * link dynamically against libgcrypt11 and libgpg-error0 now that the
@@ -22,7 +23,7 @@ cryptsetup (2:1.2.0~rc1-1) experimental; urgency=low
       different output of 'ls -l' with selinux enabled. (closes: #600522)
     + fix $TRIES implementation to support TRIES=0 again. (closes: #602501)
 
- -- Jonas Meurer <mejo@debian.org>  Thu, 16 Dec 2010 18:06:50 +0100
+ -- Jonas Meurer <mejo@debian.org>  Thu, 16 Dec 2010 18:29:25 +0100
 
 cryptsetup (2:1.1.3-4) unstable; urgency=high
 
